Stash changes to run on faster machine

--- a/src/test/resources/projects/mavenLibrary/build.gradle
+++ b/src/test/resources/projects/mavenLibrary/build.gradle
@@ -11,8 +11,8 @@ println archivesBaseName
 
 dependencies {
 	minecraft "com.mojang:minecraft:1.16.5"
-	mappings "net.fabricmc:yarn:1.16.5+build.5:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.11.2"
+	mappings "org.quiltmc:yarn:1.16.5+build.5:v2"
+	modImplementation "org.quiltmc:quilt-loader:0.13.0"
 }
 
 processResources {
