--- a/src/test/resources/projects/reproducible/build.gradle
+++ b/src/test/resources/projects/reproducible/build.gradle
@@ -12,8 +12,8 @@ group = project.maven_group
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	mappings "org.quiltmc:yarn:${project.yarn_mappings}:v2"
+	modImplementation "org.quiltmc:quilt-loader:${project.loader_version}"
 }
 
 processResources {
