--- a/src/test/resources/projects/maven/build.gradle
+++ b/src/test/resources/projects/maven/build.gradle
@@ -18,8 +18,8 @@ repositories {
 
 dependencies {
 	minecraft "com.mojang:minecraft:1.16.5"
-	mappings "net.fabricmc:yarn:1.16.5+build.5:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.11.2"
+	mappings "org.quiltmc:yarn:1.16.5+build.5:v2"
+	modImplementation "org.quiltmc:quilt-loader:0.13.0"
 
 	modImplementation System.getProperty("loom.test.resolve")
 }
