--- a/src/test/resources/projects/simple/build.gradle
+++ b/src/test/resources/projects/simple/build.gradle
@@ -16,6 +16,10 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+	// FIXME: Replace with QSL
+	maven {
+		url = "https://maven.fabricmc.net"
+	}
 }
 
 dependencies {
